using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis {
    public const string VERTICAL_AXIS = "Vertical";
    public const string HORIZONTAL_AXIS = "Horizontal";
}

public class Tags {
     public const string PLAYER_TAG = "Player";
}

public class AnimationTags {
    public const string WALK_TAG = "Walk";
    public const string KICK_TAG = "Kick";
    public const string MELEE_TAG = "MeleeAttack";
    public const string PUNCH_TAG = "Punch";
    public const string DEATH_TAG = "Death";
}


public class Scenes {
    public const string MAIN = "Main";
    public const string START = "Start";
}